--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>MOHAMMED ZUBAIR AHMED</h1>
+								<h1>MOHAMMED ZUBAIR</h1>
 								<p>Software Engineer </p>
 							</div>
 						</div>
